Add Impact affiliate verification tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name='impact-site-verification' value='a2a4ae74-7af5-4871-8820-7e0cba17e8c5'>
     <meta charset="UTF-8" />
     <title>SecureMeBuddy</title>
     <link rel="icon" type="image/png" href="/logo.png" />
