Add Impact verification meta tag

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta name='impact-site-verification' value='a2a4ae74-7af5-4871-8820-7e0cba17e8c5'>
     <meta charset="UTF-8" />
-    <title>SecureMeBuddy</title>
+<meta name="impact-site-verification" value="a2a4ae74-7af5-4871-8820-7e0cba17e8c5" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
